--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "prepublish": "yarn build"
   },
   "devDependencies": {
+    "@types/through": "^0.0.30",
     "ava": "^3.15.0",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "rhx": "^1.0.0"
   }
 }
