--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "prepublish": "yarn build"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "ava": "^3.15.0",
     "tsc-watch": "^4.2.9",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "rhx": "^1.1.1"
+    "rhx": "link:../rhx"
   }
 }
