--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "include": [
     "src/*.ts"
   ],
+  "type": "module",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "license": "MIT",
